# peppermint

./: .gitignore  README.md  pyproject.toml
src/peppermint/data/: labels_stub.csv  labels_stub.txt
src/peppermint/extraction/: docxycut.py  pdfxycut.py  pptxycut.py  xlsxcut.py
src/peppermint/features/: build.py  schema.py
src/peppermint/models/: train_layout_classifier.py
src/pyxycut/: __init__.py  delete.py  docxycut.py  images-text-tables.pptx  pdfxycut.py  pptxycut.py  vikings_history.docx  vikings_history.pptx  xlsxcut.py  xycut.py
