[project]
name = "pyxycut"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "DanielViglione", email = "dviglione02@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "pymupdf>=1.26.0",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "scikit-learn>=1.7.0",
]

[project.scripts]
pyxycut = "pyxycut:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
